# rust_contact_book

./: Cargo.toml  README.md
data/: contactbook.csv
src/: controller.rs  main.rs
src/ui/: mod.rs
