[package]
name = "rust_contact_book"
version = "0.1.0"
authors = ["Peter Keller <pmkellerza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = {version = "1.0.118", features = ["derive"]}
colour = "0.5.0"
